--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ html, body, #root {
     margin: 0;
     height: 100%;
     color: white;
+    background: black;
 }
 
 body {
